.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header__c</fullName>
    <description>Information entered here will appear in the header of custom Invoice templates.</description>
    <inlineHelpText>Information entered here will appear in the header of custom Invoice templates.</inlineHelpText>
    <label>Invoice Header</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>