.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sirenum Location</description>
    <inlineHelpText>Sirenum Location</inlineHelpText>
    <label>Location</label>
    <referenceTo>sirenum__Location__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>