.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/Override_Default_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Override_Default_PO_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Default PO Number</label>
    <type>Checkbox</type>
</CustomField>