.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/Send_Invoice_Emails_from_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Emails_from_Emails__c</fullName>
    <formula>TEXT(tc9_et__Invoice_Entity__r.tc9_et__Send_Invoice_Emails_From_Email__c)</formula>
    <label>Send Invoice Emails from Emails</label>
    <type>Text</type>
</CustomField>