.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/WFM_Contract__c.field-meta.xml
<CustomField>
    <fullName>WFM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WFM Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>