.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/fields/Worksite_Name__c.field-meta.xml
<CustomField>
    <fullName>Worksite_Name__c</fullName>
    <label>Worksite Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>