.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Invoice__c/listViews/Invoices_Not_Sent.listView-meta.xml
<ListView>
    <fullName>Invoices_Not_Sent</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_et__Invoice_Entity__c</columns>
    <columns>tc9_et__Invoice_To_Account__c</columns>
    <columns>tc9_et__Invoice_To_Contact__c</columns>
    <columns>tc9_et__Invoice_Date__c</columns>
    <columns>tc9_et__Invoice_Total_Ex_Tax__c</columns>
    <columns>tc9_et__Invoice_Total_Inc_Tax__c</columns>
    <columns>tc9_et__Invoice_Total_Tax__c</columns>
    <columns>tc9_et__Has_Been_Credited__c</columns>
    <columns>tc9_et__Has_Been_Re_invoiced__c</columns>
    <columns>tc9_et__Invoice_PDF__c</columns>
    <columns>tc9_et__Invoice_Setting__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_et__First_Sent__c</field>
        <operation>equals</operation>
    </filters>
    <label>Invoices Not Sent</label>
</ListView>